Created dockerfile for ideas app

--- a/node-server/package.json
+++ b/node-server/package.json
@@ -4,7 +4,7 @@
   "description": "Demo node server for Docker training",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "Evan Waters",
   "license": "ISC",
