--- a/ideas-angular-client/nginx.conf
+++ b/ideas-angular-client/nginx.conf
@@ -1,29 +1,60 @@
+user  nginx;
+worker_processes  1;
 
-upstream backend {
-  server api1:8080;
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
+
+events {
+    worker_connections  1024;
 }
 
-server {
-  root /var/www;
-  listen 80 default_server;
-  server_name _;
 
-  location /api {
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-NginX-Proxy true;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    rewrite ^/api/?(.*) /$1 break;
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    proxy_pass http://backend;
-    proxy_redirect off;
-  }
+    access_log  /var/log/nginx/access.log  main;
 
-  location / {
-    # First attempt to serve request as file, then
-    # as directory, then fall back to redirecting to index.html
-    try_files $uri /index.html;
-  }
+    sendfile        on;
+    #tcp_nopush     on;
 
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    include /etc/nginx/conf.d/*.conf;
+
+    upstream backend {
+      server api1:8080;
+    }
+
+    server {
+      root /var/www;
+      listen 80 default_server;
+      server_name _;
+
+      location /api {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-NginX-Proxy true;
+
+        rewrite ^/api/?(.*) /$1 break;
+
+        proxy_pass http://backend;
+        proxy_redirect off;
+      }
+
+      location / {
+        # First attempt to serve request as file, then
+        # as directory, then fall back to redirecting to index.html
+        try_files $uri /index.html;
+      }
+
+    }
 }
